...
            android:layout_marginTop="@dimen/marginvertical_small"
            android:layout_marginBottom="@dimen/marginvertical_small"
            app:errorEnabled="true"
            >

            <android.support.design.widget.TextInputEditText
                android:id="@+id/et_edititem_label"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/edititem_label_hint"
                style="@style/EditItem.AppBarTextField"
                />

...

    </android.support.design.widget.AppBarLayout>

    <include layout="@layout/content_edititem"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_edititem_save"
        app:layout_anchor="@id/appbar_edititem"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@android:drawable/ic_menu_send"
        style="@style/FAB"
        />

...
