<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Read Later</string>
    <string name="content_authority" translatable="false">com.example.mborzenkov.readlaterlist</string>
    <string name="title_activity_colorpicker">Choose color</string>

    <!-- MainActivity -->
        <!-- Онбординг для пустого списка -->
        <string name="mainlist_empty_label">List is empty</string>
        <string name="mainlist_empty_description">Add something to list with button on bottom right corner.</string>
        <!-- Меню -->
...
        <string name="mainlist_menu_add_placeholders_label">Labeeeeel</string>
        <!-- Снекбары -->
        <string name="snackbar_item_added">Item added</string>
        <string name="snackbar_item_edited">Item edited</string>
        <string name="snackbar_item_removed">Item removed</string>
        <!-- Список -->
        <string name="mainlist_icon_contentdescription">Color</string>
        <!-- Поиск -->
        <string name="searchable_mainlist_hint">Search items</string>
        <string name="mainlist_menu_search">Search</string>
        <!-- Пользователи -->
        <string name="mainlist_user_title">User:</string>
        <string name="mainlist_user_change">(change)</string>
...
